adding a new string for Print

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">إفراغ وتعطيل سلة المحذوفات</string>
     <string name="undo">تراجع</string>
     <string name="redo">إعادة</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">ترتيب حسب</string>
