--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Zibil qutusunu boşalt və qapat</string>
     <string name="undo">Geri al</string>
     <string name="redo">Təkrar et</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sırala</string>
