--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Buida i desactiva la paperera de reciclatge</string>
     <string name="undo">Desfer</string>
     <string name="redo">Refer</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
