--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Άδειασμα και απενεργοποίηση του Κάδου Ανακύκλωσης</string>
     <string name="undo">Αναίρεση</string>
     <string name="redo">Επανάληψη</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
