--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Vider et désactiver la corbeille</string>
     <string name="undo">Annuler</string>
     <string name="redo">Répéter</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
