--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -221,6 +221,7 @@
     <string name="empty_and_disable_recycle_bin">Ispraznite i onemogućite koš za smeće</string>
     <string name="undo">Poništi promjenu</string>
     <string name="redo">Ponovi promjenu</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortiraj po</string>
