--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -217,6 +217,7 @@
     <string name="empty_and_disable_recycle_bin">Lomtár kiürítése és letiltása</string>
     <string name="undo">Visszavonás</string>
     <string name="redo">Mégis</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Rendezés</string>
