--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Kosongkan dan matikan Sampah</string>
     <string name="undo">Urungkan</string>
     <string name="redo">Ulangi</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Urut berdasarkan</string>
