--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Svuota e disattiva il cestino</string>
     <string name="undo">Annulla</string>
     <string name="redo">Ripeti</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
