--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">ごみ箱を空にして無効にする</string>
     <string name="undo">元に戻す</string>
     <string name="redo">やり直し</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">並べ替え</string>
