--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Prullenbak leegmaken en uitschakelen</string>
     <string name="undo">Ongedaan maken</string>
     <string name="redo">Opnieuw</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
