--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Esvaziar e desativar a reciclagem</string>
     <string name="undo">Desfazer</string>
     <string name="redo">Refazer</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
