--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -221,6 +221,7 @@
     <string name="empty_and_disable_recycle_bin">Vysypať a deaktivovať odpadkový kôš</string>
     <string name="undo">Späť</string>
     <string name="redo">Obnoviť</string>
+    <string name="print">Tlačiť</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
