--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -223,6 +223,7 @@
     <string name="empty_and_disable_recycle_bin">Izprazni in onemogoči Koš</string>
     <string name="undo">Razveljavi</string>
     <string name="redo">Ponovno uveljavi</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Razvrsti po</string>
