--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Töm och inaktivera Papperskorgen</string>
     <string name="undo">Ångra</string>
     <string name="redo">Gör om</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortera efter</string>
