--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Geri Dönüşüm Kutusu\'nu boşalt ve devre dışı bırak</string>
     <string name="undo">Geri al</string>
     <string name="redo">Yinele</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
