--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">清空并禁用回收站</string>
     <string name="undo">撤销</string>
     <string name="redo">重做</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
