--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">清空並停用回收桶</string>
     <string name="undo">復原</string>
     <string name="redo">取消復原</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序</string>
