--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Papierkorb leeren und deaktivieren</string>
     <string name="undo">Rückgängig</string>
     <string name="redo">Wiederholen</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
