--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Tøm og deaktiver papirkurven</string>
     <string name="undo">Angre</string>
     <string name="redo">Annuler angre</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
