--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -219,6 +219,7 @@
     <string name="empty_and_disable_recycle_bin">Wyczyść i wyłącz kosz</string>
     <string name="undo">Cofnij</string>
     <string name="redo">Ponów</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortuj według parametru:</string>
