--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
     <string name="undo">Undo</string>
     <string name="redo">Redo</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
