--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -221,6 +221,7 @@
     <string name="empty_and_disable_recycle_bin">Очистить и отключить корзину</string>
     <string name="undo">Отменить</string>
     <string name="redo">Повторить</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
