--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -218,6 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Спорожнити та вимкнути Кошик</string>
     <string name="undo">Повернути</string>
     <string name="redo">Повторити</string>
+    <string name="print">Print</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортувати за</string>
