updating the note telling about reading the FAQ, include app settings

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -540,7 +540,7 @@
     </string>
     <string name="purchase">Comprar</string>
     <string name="update_thank_you">Si us plau, actualitzeu Simple Thank You a la darrera versió</string>
-    <string name="before_asking_question_read_faq">Abans de fer una pregunta, llegiu les Preguntes més freqüents en primer lloc, potser la solució hi és.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Llegiu</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
