--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -557,7 +557,7 @@
     </string>
     <string name="purchase">Kupi</string>
     <string name="update_thank_you">Molim ažurirajte Jednostavno hvala na najnoviju verziju</string>
-    <string name="before_asking_question_read_faq">Prije nego što postavite pitanje, najprije pročitajte Često postavljana pitanja, možda postoji rješenje.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Pročitajte</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
