--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">Comprar</string>
     <string name="update_thank_you">Por favor atualize a aplicação Simple Thank You para a versão mais recente</string>
-    <string name="before_asking_question_read_faq">Antes de colocar uma questão, leia as FAQ pois pode já existir uma solução para o seu problema.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Ler</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
