--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -559,7 +559,7 @@
     </string>
     <string name="purchase">Купить</string>
     <string name="update_thank_you">Пожалуйста, обновите \"Simple Thank You\" до последней версии.</string>
-    <string name="before_asking_question_read_faq">Прежде чем задать вопрос, пожалуйста, прочтите ответы на часто задаваемые вопросы (FAQ), возможно, решение уже есть.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Прочитать</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
