--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">Satın al</string>
     <string name="update_thank_you">Lütfen Basit Teşekkürler\'i son sürüme güncelleyin</string>
-    <string name="before_asking_question_read_faq">Bir soru sormadan önce lütfen Sık Sorulan Sorular bölümünü okuyun, belki orada çözümü vardır.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Oku</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
