--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">购买</string>
     <string name="update_thank_you">请更新 Simple Thank You 到最新版本</string>
-    <string name="before_asking_question_read_faq">提问前请先阅读常见问题列表，或许已经有回答。</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">阅读</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
