--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">Beli</string>
     <string name="update_thank_you">Harap perbarui Simple Thank You ke versi terbaru</string>
-    <string name="before_asking_question_read_faq">Sebelum bertanya, harap baca FAQ terlebih dahulu, mungkin solusinya ada disitu.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Baca</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
