--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">Kopen</string>
     <string name="update_thank_you">Er is een nieuwe versie van Simple Thank You</string>
-    <string name="before_asking_question_read_faq">Kijk bij problemen eerst naar de Veelgestelde vragen. Wellicht staat de oplossing daar beschreven.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Nu lezen</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
