--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">購買</string>
     <string name="update_thank_you">請更新[Simple Thank You]至最新版本</string>
-    <string name="before_asking_question_read_faq">在您發問前，請先閱讀[常見問題]，或許解決方法就在那裡。</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">讀它</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
