--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -218,7 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Prullenbak leegmaken en uitschakelen</string>
     <string name="undo">Ongedaan maken</string>
     <string name="redo">Opnieuw</string>
-    <string name="print">Print</string>
+    <string name="print">Printen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">Kopen</string>
     <string name="update_thank_you">Er is een nieuwe versie van Simple Thank You</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Controleer bij problemen eerst de instellingen van de app en neem de Veelgestelde vragen door. Wellicht is de oplossing daar reeds te vinden.</string>
     <string name="read_it">Nu lezen</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
