--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -218,7 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Vaciar y desactivar la papelera de reciclaje</string>
     <string name="undo">Deshacer</string>
     <string name="redo">Rehacer</string>
-    <string name="print">Print</string>
+    <string name="print">Imprimir</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
@@ -537,7 +537,7 @@
     </string>
     <string name="purchase">Comprar</string>
     <string name="update_thank_you">Por favor, actualice Simple Tank You a la última versión</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Antes de hacer una pregunta, lea las Preguntas más frecuentes. Quizás la solución esté allí.</string>
     <string name="read_it">Leer</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
