--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -218,7 +218,7 @@
     <string name="empty_and_disable_recycle_bin">Tøm og deaktiver papirkurven</string>
     <string name="undo">Angre</string>
     <string name="redo">Annuler angre</string>
-    <string name="print">Print</string>
+    <string name="print">Skriv ut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
@@ -402,10 +402,10 @@
     <string name="recycle_bin_cleaning_interval">Tømmeintervall for papirkurven</string>
     <string name="empty_recycle_bin">Tøm papirkurven</string>
     <string name="force_portrait_mode">Påtving portrettmodus</string>
-    <string name="export_settings">Export settings</string>
-    <string name="import_settings">Import settings</string>
-    <string name="settings_exported_successfully">Settings exported successfully</string>
-    <string name="settings_imported_successfully">Settings imported successfully</string>
+    <string name="export_settings">Eksporter innstillinger</string>
+    <string name="import_settings">Importer innstillinger</string>
+    <string name="settings_exported_successfully">Innstillinger eksportert</string>
+    <string name="settings_imported_successfully">Innstillinger importert</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
@@ -416,7 +416,7 @@
     <string name="saving_label">Saving</string>
     <string name="startup">Startup</string>
     <string name="text">Text</string>
-    <string name="migrating">Migrating</string>
+    <string name="migrating">Overføring</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Gjenopprett denne filen</string>
@@ -442,7 +442,7 @@
     <string name="exporting_failed">Eksportering feilet</string>
     <string name="importing_some_entries_failed">Importering av noen oppføringer feilet</string>
     <string name="exporting_some_entries_failed">Eksportering av noen oppføringer feilet</string>
-    <string name="no_entries_for_importing">No entries for importing have been found</string>
+    <string name="no_entries_for_importing">Ingen oppføringer for importering er funnet</string>
     <string name="no_entries_for_exporting">Ingen oppføringer for eksportering er funnet</string>
 
     <!-- OTG devices -->
