fixing an italian string

--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -403,7 +403,7 @@
     <string name="empty_recycle_bin">Svuota il cestino</string>
     <string name="force_portrait_mode">Forza la modalità ritratto</string>
     <string name="export_settings">Esporta impostazioni</string>
-    <string name="import_settings">Imposta impostazioni</string>
+    <string name="import_settings">Importa impostazioni</string>
     <string name="settings_exported_successfully">Impostazioni esportate correttamente</string>
     <string name="settings_imported_successfully">Impostazioni importate correttamente</string>
 
