--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -427,6 +427,8 @@
     <string name="empty_recycle_bin_confirmation">Anda yakin ingin mengosongkan sampah? File akan dihapus secara permanen.</string>
     <string name="recycle_bin_empty">Sampah kosong</string>
     <string name="moving_recycle_bin_items_disabled">Memindahkan item ke Sampah dimatikan, gunakan fungsi Pulihkan</string>
+    <string name="show_the_recycle_bin">Show the Recycle Bin</string>
+    <string name="hide_the_recycle_bin">Hide the Recycle Bin</string>
 
     <plurals name="moving_items_into_bin">
         <item quantity="one">Memindahkan %d item ke Sampah</item>
