--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -448,6 +448,8 @@
     <string name="empty_recycle_bin_confirmation">Ste si istý, že chcete vysypať odpadkový kôš? Súbory budú navždy stratené.</string>
     <string name="recycle_bin_empty">Odpadkový kôš je prázdny</string>
     <string name="moving_recycle_bin_items_disabled">Presúvanie položiek z odpadkového koša je zakázané, prosím použite možnosť Obnoviť</string>
+    <string name="show_the_recycle_bin">Zobraziť odpadkový kôš</string>
+    <string name="hide_the_recycle_bin">Skryť odpadkový kôš</string>
 
     <plurals name="moving_items_into_bin">
         <item quantity="one">%d položka sa presúva do odpadkového koša</item>
